# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import authRouter from "./auth";
+import categoriesRouter from "./categories";
+import threadsRouter from "./threads";
+import postsRouter from "./posts";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(authRouter);
+router.use(categoriesRouter);
+router.use(threadsRouter);
+router.use(postsRouter);
 
 export default router;
